--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -106,6 +106,7 @@
   border: none;
   cursor: pointer;
   padding: 5px;
+  position: relative;
   z-index: 10000;
 }
 
